Login UI Implementation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
 <!Doctype html>
 <html xmlns:th="http://thymeleaf.org">
-<head>
-    <title>Technical Blog Application</title>
+<head th:replace="layout::site-head">
 </head>
+
+<header th:replace="layout::logged-out"></header>
 
 <body>
 
